# braincloud-unreal-unit-tests

./: .gitignore  .gitmodules  .ignore  BCSubsystem.code-workspace  BCSubsystem.uproject  BrainCloudCpp.podspec  BrainCloudCpp_forObjC.podspec  CMake-README.txt  CMakeLists.txt  Gemfile  Jenkinsbuild.Jenkinsfile  Jenkinsfile  README.md  UpgradeLog.htm  slackNotify.ps1
BrainCloudCpp.xcodeproj/: project.pbxproj
Config/: BrainCloudConfig.ini  BrainCloudSettings.ini  DefaultEditor.ini  DefaultEditorPerProjectUserSettings.ini  DefaultEditorSettings.ini  DefaultEngine.ini  DefaultGame.ini
Config/Android/: AndroidEngine.ini
Content/: AndroidSpecificTesting.umap  AndroidTest.umap  AndroidTestHandler.uasset  Android_SimpleTest.uasset  BC_GameInstance.uasset  BrainCloud.uasset  DeviceScreen.uasset  DeviceTest.umap  DeviceTestHandler.uasset  DeviceTest_BuiltData.uasset  ETestUser.uasset  EmptyWorld.umap  GlobalTestHandler.uasset  InstanceTestHandler.uasset  TestBL.uasset  TestBase.uasset  TestMacros.uasset  TestResult.uasset  TestType.uasset  TestUser.uasset  Tests_GI.uasset
Content/AutomatedTestMaps/: AllTests.umap  Disabled_Relay-WIP.umap  Disabled_RelayEndMatch.umap  Test_AppStore.umap  Test_AsyncMatch.umap  Test_Authentication.umap  Test_Chat.umap  Test_Comms.umap  Test_Compression.umap  Test_CustomEntity.umap  Test_DataStream.umap  Test_Entity.umap  Test_Event.umap  Test_File.umap  Test_Friend.umap  Test_Gamification.umap  Test_GlobalApp.umap  Test_GlobalEntity.umap  Test_GlobalFile.umap  Test_GlobalStatistics.umap  Test_Group.umap  Test_GroupFile.umap  Test_Identity.umap  Test_ItemCatalog.umap  Test_Leaderboard.umap  Test_Lobby.umap  Test_Mail.umap  Test_Matchmaking.umap  Test_Messaging.umap  Test_OneWayMatch.umap  Test_PlaybackStream.umap  Test_PlayerState.umap  Test_PlayerStatistics.umap  Test_PlayerStatisticsEvent.umap  Test_Presence.umap  Test_Profanity.umap  Test_PushNotification.umap  Test_RTT.umap  Test_RedemptionCode.umap  Test_Relay-WIP.umap  (+8 more)
Content/Maps/: BPUnitTest.umap  BundleTest.umap  FlatMap.umap  FlatMap_BuiltData.uasset  NewCommsTest.umap  SteveTest.umap  SubsystemTest.umap  TestAuthUser.umap  TestBP.umap  TestBundleMarker.umap  TestFileUpload.umap  TestKillSwitch.umap  TestLoad.umap  TestTimeout.umap  TestWrapper.umap
Content/OldMaps/: BPUnitTest.umap  BundleTest.umap  (+9 more)
Shared/: AuthenticationType.cpp  BrainCloudAsyncMatch.cpp  BrainCloudAsyncMatch.h  BrainCloudAuthentication.cpp  BrainCloudAuthentication.h  BrainCloudClient.cpp  BrainCloudClient.h  BrainCloudComms.cpp  BrainCloudComms.h  BrainCloudDataStream.cpp  BrainCloudEntity.cpp  BrainCloudEntity.h  BrainCloudEvent.cpp  BrainCloudEvent.h  BrainCloudFile.cpp  BrainCloudFile.h  BrainCloudFriend.cpp  BrainCloudFriend.h  BrainCloudGamification.cpp  BrainCloudGamification.h  BrainCloudGlobalApp.cpp  BrainCloudGlobalApp.h  BrainCloudGlobalEntity.cpp  BrainCloudGlobalEntity.h  BrainCloudGlobalStatistics.cpp  BrainCloudGlobalStatistics.h  BrainCloudIdentity.cpp  BrainCloudIdentity.h  BrainCloudMatchmaking.cpp  BrainCloudMatchmaking.h  BrainCloudOneWayMatch.cpp  BrainCloudOneWayMatch.h  BrainCloudPlaybackStream.cpp  BrainCloudPlaybackStream.h  BrainCloudPlayerState.cpp  BrainCloudPlayerStatistics.cpp  BrainCloudPlayerStatisticsEvent.cpp  BrainCloudPlayerStatisticsEvent.h  BrainCloudProduct.cpp  BrainCloudProduct.h  (+41 more)
Source/: BCSubsystem.Target.cs  BCSubsystemEditor.Target.cs
autobuild/: Jenkinsfile  _brainCloudSetup_braincloud-unreal.bat  _brainCloudSetup_braincloud-unreal.command  _brainCloudSetup_examples-unreal.bat  backward-check.sh  build_android.sh  build_apple_unified.sh  build_appletv.sh  build_ios.sh  build_linux.sh  build_marmalade.bat  build_marmalade_unittest.bat  build_osx.sh  build_win.py  build_win2008.bat  build_win2010.bat  build_win20xx.bat  build_win_latest.bat  build_win_latest_with_unittest.bat  checkout-submodule.bat  checkout-submodule.sh  cleanupunreal.bat  cleanupunreal.sh  generate-ids.bat  generate-ids.sh  makebuild.bat  makebuild.sh  merge-check.sh  merge-develop.sh  runtest.bat  runtest.sh  switch_project.bat  switch_project.sh  update-submodules.sh  util.py  verify-hash.bat  verify-hash.sh  vstudio.py  workspace-genarate.sh
solutions/: README.md
src/: AuthenticationType.cpp  BrainCloudAppStore.cpp  BrainCloudAsyncMatch.cpp  BrainCloudAuthentication.cpp  BrainCloudChat.cpp  BrainCloudClient.cpp  BrainCloudComms.cpp  BrainCloudCustomEntity.cpp  BrainCloudDataStream.cpp  BrainCloudEntity.cpp  BrainCloudEvent.cpp  BrainCloudFile.cpp  BrainCloudFriend.cpp  BrainCloudGamification.cpp  BrainCloudGlobalApp.cpp  BrainCloudGlobalEntity.cpp  BrainCloudGlobalFile.cpp  BrainCloudGlobalStatistics.cpp  BrainCloudGroup.cpp  BrainCloudIdentity.cpp  BrainCloudItemCatalog.cpp  BrainCloudLobby.cpp  BrainCloudMail.cpp  BrainCloudMatchmaking.cpp  BrainCloudMessaging.cpp  BrainCloudOneWayMatch.cpp  BrainCloudPlaybackStream.cpp  BrainCloudPlayerState.cpp  BrainCloudPlayerStatistics.cpp  BrainCloudPlayerStatisticsEvent.cpp  BrainCloudPresence.cpp  BrainCloudProduct.cpp  BrainCloudProfanity.cpp  BrainCloudPushNotification.cpp  BrainCloudRTT.cpp  BrainCloudRTTRegistration.cpp  BrainCloudRedemptionCode.cpp  BrainCloudRelay.cpp  BrainCloudS3Handling.cpp  BrainCloudScript.cpp  (+41 more)
tests/: CMakeLists.txt
tests/gtest-1.7.0/src/: gtest_main.cc
tests/src/: TestBCAppStore.cpp  TestBCAppStore.h  TestBCAsyncMatch.cpp  TestBCAsyncMatch.h  TestBCAuth.cpp  TestBCAuth.h  TestBCChat.cpp  TestBCChat.h  TestBCComms.cpp  TestBCComms.h  TestBCCustomEntity.cpp  TestBCCustomEntity.h  TestBCDataStream.cpp  TestBCDataStream.h  TestBCEntity.cpp  TestBCEntity.h  TestBCEvent.cpp  TestBCEvent.h  TestBCFile.cpp  TestBCFile.h  TestBCFriend.cpp  TestBCFriend.h  TestBCGamification.cpp  TestBCGamification.h  TestBCGlobalApp.cpp  TestBCGlobalApp.h  TestBCGlobalEntity.cpp  TestBCGlobalEntity.h  TestBCGlobalFile.cpp  TestBCGlobalFile.h  TestBCGlobalStatistics.cpp  TestBCGlobalStatistics.h  TestBCGroup.cpp  TestBCGroup.h  TestBCIdentity.cpp  TestBCIdentity.h  TestBCItemCatalog.cpp  TestBCItemCatalog.h  TestBCLobby.cpp  TestBCLobby.h  (+56 more)
(+821 files in other folders)
